2005-01-08  Bruno Haible  <bruno@clisp.org>

	* libgrep.m4: New file.
	* hard-locale.m4: New file, from gnulib.
	* memchr.m4: New file, from gnulib.
	* regex.m4: New file, from gnulib.
	* restrict.m4: New file, from gnulib.
	* strdup.m4: New file, from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strcase.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* stpncpy.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* error.m4: Upgrade from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* quote.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add quote.m4.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* exitfail.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add exitfail.m4.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add getopt.m4.
	* getopt.m4: New file, from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4: Upgrade from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4: Upgrade to gnulib version.

2004-11-02  Bruno Haible  <bruno@clisp.org>

	* setenv.m4 (gt_FUNC_SETENV): Define VOID_UNSETENV if unsetenv()
	returns void.

2004-10-04  Paul Eggert  <eggert@cs.ucla.edu>

	* unlocked-io.m4: Add copyright notice.
	(gl_FUNC_GLIBC_UNLOCKED_IO): Define USE_UNLOCKED_IO.

2004-06-01  Paul Eggert  <eggert@cs.ucla.edu>

	* quotearg.m4: Fix copyright date and/or serial number.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* allocsa.m4 (gl_ALLOCSA): Require also gl_AC_TYPE_LONG_LONG and
	gt_TYPE_LONGDOUBLE.

2003-09-17  Paul Eggert  <eggert@twinsun.com>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Call AC_BEFORE first,
	to avoid spurious warnings like "AC_RUN_IFELSE was called before
	gl_USE_SYSTEM_EXTENSIONS" from autoreconf.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Require AC_AIX